adding font and setting color scheme in index.css

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Defer - Messaging platform that respects your time.</title>
+    <title>DEFER | Send it when it matters.</title>
   </head>
   <body>
     <div id="root"></div>
